# Genetic_and_SD_Algo

./: CMakeLists.txt  d_except.h  d_random.h  main.cpp  results2b.txt
Genetic Results/: color12-3.output  color12-4.output  color192-6.output  color192-7.output  color192-8.output  color24-4.output  color24-5.output  color48-5.output  color48-6.output  color96-6.output  color96-7.output
Steepest Descent Results/: color12-3.output  color12-4.output  color192-6.output  color192-7.output  color192-8.output  color24-4.output  color24-5.output  color48-5.output  color48-6.output  color96-6.output  color96-7.output
results2b/: color12-3.output  color12-4.output  color192-6.output  color192-7.output  color192-8.output  color24-4.output  color24-5.output  color48-5.output  color48-6.output  color96-6.output  color96-7.output
